--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.wordly {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.guesses {
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.guess, .current-guess {
+  display: flex;
+  justify-content: center;
 }
 
-.card {
-  padding: 2em;
+.letter {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2px;
+  font-size: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.correct {
+  background-color: green !important;;
+  color: white;
+}
+
+.present {
+  background-color: yellow !important;;
+  color: black;
+}
+
+.absent {
+  background-color: grey !important;
+  color: white;
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 18px;
+  color: red;
 }
