--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,35 @@
-.wordly {
+.layout {
+  display: flex;
+  flex: 1;
+  box-sizing: border-box;
+  width: 100vw;
+  max-width: 100dvw;
+  height: 100vh;
+  max-height: 100vh;
+  padding-top: env(safe-area-inset-top, 40px);
+  padding-bottom: env(safe-area-inset-bottom, 40px);
+  padding-left: env(safe-area-inset-left, 16px);
+  padding-right: env(safe-area-inset-right, 16px);
+  overflow: hidden;
+  justify-content: center;
+}
+
+.game {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  gap: 10px;
+}
+
+.wordly {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
   margin-top: 50px;
+  max-width: 500px;
 }
 
 h1 {
@@ -11,7 +38,7 @@ h1 {
 }
 
 .guesses {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .guess, .current-guess {
@@ -20,14 +47,14 @@ h1 {
 }
 
 .letter {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 2px;
-  font-size: 20px;
+  font-size: 32px;
 }
 
 .correct {
@@ -46,7 +73,10 @@ h1 {
 }
 
 .message {
-  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
   font-size: 18px;
   color: red;
 }
